# foci-mcp-harness

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_minimal.txt
harness/: mcp_server.py
src/foci/: __init__.py  agent.py  goal.py  loki.py  swarm.py
tests/: test_foci.py
